# python_openproject_api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py
backend/app/dashboard/: app.py
backend/app/exporters/: __init__.py  powerbi.py
backend/app/openproject_api/: __init__.py  client.py
backend/app/orchestration/: __init__.py  run_api.py
backend/app/transformations/: normalize.py  schema.py
backend/data/: projects.csv  work_packages.csv
docs/: architecture.md  configuration.md  design_philosophy.md  development.md  orchestration.md  troubleshooting.md
